@@ -26,6 +26,8 @@ Version 7.4  [ (to be announced) ]
         - Updated the included pybind11 library from 2.10.0 to 2.10.4.
         - Improved the speed of iteration (specifically, throwing/catching
           StopIteration exceptions).
+    USER INTERFACE:
+        - Now uses multithreading for those long computations that support it.
 
 Version 7.3  [ 18 March, 2023 ]
 
